fix dropdown ui being overlapped by table header

--- a/approvalworkflow/approvalworkflow/wwwroot/css/site.css
+++ b/approvalworkflow/approvalworkflow/wwwroot/css/site.css
@@ -232,3 +232,7 @@ body {
 .info{
   width: 40%;
 }
+
+.table-header.sticky-top{
+  z-index: 1;
+}
